Migrate to java 21